--- a/style.css
+++ b/style.css
@@ -1,33 +1,29 @@
-.container {
+.main-container {
+  display: flex;
+  background-color: #e5e7eb;
   justify-content: center;
   align-items: center;
-  width: 90%;
-  height: 80vh;
-  background-image: url(asset/background-dark.png);
+  width: 100%;
+  height: 100vh;
+}
+.second-container {
+  display: flex;
+  padding: 1.25rem;
+  width: 75%;
+  height: 75%;
+  border-radius: 0.5rem;
+  background-image: url(./asset/background-dark.png);
   background-size: auto;
   background-repeat: no-repeat;
+  background-position: center;
 }
-.container-left {
+.left-content-container {
   width: 50%;
-  height: auto;
-  float: left;
-  padding: 10px;
-}
-.container-right {
-  width: 50%;
-  height: 95%;
-  float: right;
-  padding: 10px;
-}
-.content-left {
-  background-color: aqua;
-}
-.content-right {
   height: 100%;
-  background-color: bisque;
 }
-
-.second-container {
-  background-image: url(/asset/background-dark.png);
-  background-size: auto;
+.right-content-container {
+  background-color: #ffffff;
+  width: 50%;
+  height: 100%;
+  border-radius: 0.5rem;
 }
