--- a/style.css
+++ b/style.css
@@ -27,3 +27,23 @@
   height: 100%;
   border-radius: 0.5rem;
 }
+.top-left-content {
+  display: flex;
+  width: 100%;
+  height: 16.666667%;
+}
+.list-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.mid-left-content {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+  width: 100%;
+  height: 33.333333%;
+}
