--- a/style.css
+++ b/style.css
@@ -47,3 +47,41 @@
   width: 100%;
   height: 33.333333%;
 }
+.hi-name {
+  color: #ffffff;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 600;
+}
+.headline {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: rgba(255, 255, 255, 0.3);
+}
+.search-box {
+  position: relative;
+  width: 100%;
+}
+.search-input {
+  padding: 0.75rem;
+  padding-left: 2.5rem;
+  margin-top: 1.25rem;
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.search-icon {
+  position: absolute;
+  left: 0.75rem;
+  top: 2rem;
+}
+.bottom-left-content {
+  padding-left: 4rem;
+  padding-right: 4rem;
+  background-color: #10b981;
+  width: 100%;
+  height: 50%;
+}
