--- a/style.css
+++ b/style.css
@@ -15,18 +15,12 @@
   background-image: url(./asset/background-dark.png);
   background-size: 230%;
   background-repeat: no-repeat;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 26px 40px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 26px 40px 0 rgba(0, 0, 0, 0.19);
 }
 .left-content-container {
   width: 50%;
   height: 100%;
   padding: 1rem;
-}
-.right-content-container {
-  background-color: #ffffff;
-  width: 50%;
-  height: 100%;
-  border-radius: 0.5rem;
 }
 .top-left-content {
   display: flex;
@@ -60,7 +54,7 @@
   color: #ffffff;
   font-size: 1.875rem;
   line-height: 2.25rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 .headline {
   font-size: 0.75rem;
@@ -229,4 +223,163 @@
     color: rgba(255, 255, 255, 0.3);
     font-size: 0.6rem;
   }
+}
+.right-content-container {
+  background-color: #ffffff;
+  width: 50%;
+  height: 100%;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+}
+.content-right-top {
+  display: flex;
+  width: 100%;
+  height: 20%;
+}
+.headline-right {
+  width: 69.99999%;
+}
+.left {
+  width: 30%;
+}
+.headline-box {
+  display: flex;
+  margin-top: 0.25rem;
+  flex-direction: column;
+}
+.headline-big {
+  color: #374151;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 500;
+}
+.title-line {
+  color: #9ca3af;
+  font-size: 0.6rem;
+  line-height: 0.8rem;
+}
+.profile {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+.pp {
+  display: flex;
+  right: 1.5rem;
+}
+.pp-badge {
+  background-color: #6b7280;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 9999px;
+  border-width: 2px;
+  border-color: #ffffff;
+}
+#badge-1 {
+  z-index: 10;
+}
+#badge-2 {
+  z-index: 20;
+  margin-left: -0.75rem;
+  margin-left: -0.875rem;
+}
+#badge-3 {
+  z-index: 30;
+  margin-left: -0.75rem;
+  margin-left: -0.875rem;
+}
+.content-list {
+  display: flex;
+  /* background-color: #fcd34d; */
+  width: 100%;
+  height: 79.99999%;
+  flex-direction: column;
+}
+.head-list {
+  display: flex;
+  padding-bottom: 1.25rem;
+  justify-content: space-between;
+  width: 100%;
+}
+.list-title {
+  color: #374151;
+  font-weight: 600;
+}
+.list {
+  display: flex;
+  margin-top: 0.25rem;
+  flex-direction: column;
+}
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* The container */
+.check {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  /* margin-bottom: 12px; */
+  cursor: pointer;
+  /* font-size: 22px; */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.check input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+  border-radius: 100%;
+}
+
+/* On mouse-over, add a grey background color */
+.check:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.check input:checked ~ .checkmark {
+  background-color: #2196f3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.check .checkmark:after {
+  left: 6px;
+  top: 4px;
+  width: 8px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 3px 2.5px 0;
+  -webkit-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
 }
